# myquant-mcp

./: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO  agent.html  client.py  docker-compose.yml  log_config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  storage.py  webui.html  windows_server.py
.claude/: settings.local.json
.cursor/: mcp.json
.kilocode/: mcp.json
api/: routes.py
server/: __init__.py  agent_page.py  app.py  config.py  log_config.py  mcp_server.py  storage.py
server/api/: __init__.py  direct_call.py  rest.py  webui.py
server/tools/: __init__.py  do_t.py  execution.py  fundamental.py  market.py  trading.py
services/: client.py  tools.py
skills/myquant-mcp/: SKILL.md
skills/myquant-mcp/agents/: openai.yaml
skills/myquant-mcp/references/: mcp-config.md
skills/myquant-mcp/scripts/: client.py
tests/: README.md  common.py  conftest.py  test_available.py  test_config_unit.py  test_direct_call_unit.py  test_do_t_unit.py  test_ipo_check.py  test_log_config_unit.py  test_quick_check.py  test_rest_unit.py  test_unavailable.py  test_webui_app_mcp_unit.py
utils/: title.py
